--- a/src/libdoxygen.t.in
+++ b/src/libdoxygen.t.in
@@ -107,17 +107,20 @@ sub GenerateDep {
 	$(YACC) -l -d -p vhdlScanYY vhdlparser.y -o vhdlparser.c 
 	-rm vhdlparser.c	
 	
-#$ GenerateDep("verilogscanner.cpp","verilogscanner.l");
+#$ GenerateDep("verilogscanner.cpp","verilogscanner.l", "verilogparser.hpp");
 	$(LEX)  -8  -PverilogScanYY -t verilogscanner.l | $(INCBUFSIZE) >verilogscanner.cpp
 
 #$ GenerateDep("verilogparser.cpp","verilogparser.y");
-	$(YACC)  -v -d verilogparser.y -o verilogparser.cpp 
+	$(YACC)  -v -d -p verilogScanYY verilogparser.y -o verilogparser.cpp 
+
+#$ GenerateDep("verilogparser.hpp","verilogparser.y");
+	$(YACC) -l -d -p verilogScanYY verilogparser.y -o verilogparser.c 
+	-rm verilogparser.c
+	-mv verilogparser.h verilogparser.hpp 
 
 #$ GenerateDep("VPreLex.cpp","VPreLex.l");
 	$(LEX) -PVPreLex -t VPreLex.l | $(INCBUFSIZE) >VPreLex.cpp 
-	
 
-	
 #$ GenerateDep("layout.cpp","layout_default.h");
 
 TO_C_CMD=sed -e "s/\\\\/\\\\\\\\/g" -e "s/\"/\\\\\"/g" -e "s/^/\"/g" -e "s/$$/\\\\n\"/g"
