--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,7 +45,7 @@ distclean: clean
                ce_parse.cpp ce_parse.h tag.cpp commentscan.cpp \
 	       declinfo.cpp defargs.cpp commentcnv.cpp doctokenizer.cpp \
 	       pycode.cpp pyscanner.cpp fortrancode.cpp fortranscanner.cpp \
-	       vhdlscanner.cpp vhdlcode.cpp tclscanner.cpp vhdlparser.h \
+	       vhdlscanner.cpp vhdlcode.cpp tclscanner.cpp vhdlparser.h \      	       verilogparser.cpp verilogparser.hpp verilogscanner.cpp VPreLex.cpp \
 	       vhdlparser.cpp \
 
 # clean also the generated files which are in SVN
