--- a/src/libdoxygen.pro.in
+++ b/src/libdoxygen.pro.in
@@ -171,7 +171,7 @@ HEADERS      =	arguments.h \
 		util.h \
 		verilogscanner.h \
 		verilogdocgen.h \
-		verilogparser.hpp \
+		verilogparser.h \
 		version.h \
 		VFileLine.h \
 		vhdlcode.h \
